fix: overflow fix

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -3,6 +3,11 @@
 @import 'image-modal_project.scss';
 @import 'elements_project.scss';
 
+:root, :host{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .td-navbar{
   min-height:6rem;
 .navbar-brand  {
